--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "socket.io": "^1.7.2"
+    "socket.io": "^1.7.2",
+    "cors": "^2.8.5"
+    
   },
   "files": [
     "LICENSE",
