--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "socket.io": "^1.7.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "socket.io-client": "^4.0.0"
     
   },
   "files": [
