--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
   },
   "homepage": "http://www.nacios.it/",
   "dependencies": {
+    "ccxws": "^0.43.0",
+    "cors": "^2.8.5",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "socket.io": "^1.7.2",
-    "cors": "^2.8.5",
     "socket.io-client": "^4.0.0",
-    "ws-wrapper": "^2.0.2",
-    "ws": ">=3.3.1 <4"
-    
+    "ws": ">=3.3.1 <4",
+    "ws-wrapper": "^2.0.2"
   },
   "files": [
     "LICENSE",
